#
# Automake Makefile template for mpeg2enc++ library 
# and mpeg2enc command line wrapper.
#

bin_PROGRAMS = mpeg2enc 

mpeg2encpp_MMXSSE_ASM = \
	fdct_mmx.s \
	fdctdata.c \
	idct_mmx.s \
	idctdata.c \
	predict_mmx.s \
	predcomp_mmxe.s \
	predcomp_mmx.s \
	quant_mmx.s

mpeg2encpp_MMXSSE_INLINE = \
	predict_x86.c \
	quantize_x86.c \
	transfrm_x86.c

EXTRA_DIST = NOTES

MAINTAINERCLEANFILES = Makefile.in

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/utils

lib_LTLIBRARIES = libmpeg2encpp.la

if HAVE_ALTIVEC
LIBSIMDASM_LIB = $(top_builddir)/utils/altivec/libaltivec.a
SIMD_INLINE = 
else # HAVE_ALTIVEC
if HAVE_ASM_MMX
if HAVE_ASM_NASM
noinst_LIBRARIES = libmmxsseasm.a
libmmxsseasm_a_SOURCES = $(mpeg2encpp_MMXSSE_ASM)
SIMD_INLINE = $(mpeg2encpp_MMXSSE_INLINE)
LIBSIMDASM_LIB = libmmxsseasm.a \
	$(top_builddir)/utils/mmxsse/libmmxsse.a
else # HAVE_ASM_NASM
LIBSIMDASM_LIB = 
SIMD_INLINE = 
endif # HAVE_ASM_NASM
else # HAVE_ASM_MMX
LIBSIMDASM_LIB = 
SIMD_INLINE = 
endif # HAVE_ASM_MMX
endif # HAVE_ALTIVEC

# Reference implementations of lowlevel routines that may have Architecture
# dependent (usually SIMD) implementations

mpeg2enc_REF = \
	fdctref.c \
	idct.c \
	predict_ref.c \
	quantize_ref.c \
	transfrm_ref.c

mpeg2enc_noinst_header_REF = \
	quantize_ref.h \
	transfrm_ref.h

mpeg2enc_inst_header_REF = \
	predict_ref.h

mpeg2enc_SOURCES = \
	mpeg2enc.cc 

libmpeg2encpp_la_SOURCES = \
	conform.cc \
	elemstrmwriter.cc \
	encoderparams.cc \
	macroblock.cc  \
	motionest.cc \
	mpeg2coder.cc \
	mpeg2encoptions.cc \
	mpeg2encoder.cc \
	picture.cc \
	picturereader.cc \
	predict.cc \
	putpic.cc \
	putseq.cc \
	quantize.cc \
	ratectl.cc \
	stats.cc \
	synchrolib.cc \
	tables.c  \
	transfrm.cc \
	writepic.cc \
	$(mpeg2enc_REF) \
	$(SIMD_INLINE)

noinst_HEADERS = \
	mpeg2syntaxcodes.h \
	quantize_precomp.h \
	simd.h \
	tables.h \
	$(mpeg2enc_noinst_header_REF)

libmpeg2encpp_includedir = $(pkgincludedir)/mpeg2enc

libmpeg2encpp_include_HEADERS = \
	elemstrmwriter.hh \
	encoderparams.hh \
	macroblock.hh \
	mpeg2coder.hh \
	mpeg2encoder.hh \
	mpeg2encoptions.hh \
	mpeg2encparams.h \
	picture.hh \
	picturereader.hh \
	quantize.hh \
	ratectl.hh \
	seqencoder.hh \
	synchrolib.h \
	syntaxconsts.h \
	$(mpeg2enc_inst_header_REF)

libmpeg2encpp_la_LDFLAGS = \
	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
	-release $(LT_RELEASE) \
	-export-dynamic 

libmpeg2encpp_la_DEPENDENCIES = \
	$(top_builddir)/utils/libcpuaccel.a \
	$(top_builddir)/utils/libmjpegutils.a \
	$(top_builddir)/utils/libmotion.a \
	$(LIBSIMDASM_LIB)

libmpeg2encpp_la_LIBADD = \
	$(top_builddir)/utils/libcpuaccel.a \
	$(top_builddir)/utils/libmjpegutils.a \
	$(top_builddir)/utils/libmotion.a \
	$(LIBSIMDASM_LIB)

mpeg2enc_DEPENDENCIES = \
	$(top_builddir)/mpeg2enc/libmpeg2encpp.la

mpeg2enc_LDADD = \
	$(top_builddir)/mpeg2enc/libmpeg2encpp.la \
	@PTHREAD_LIBS@ @LIBGETOPT_LIB@ $(LIBM_LIBS)

# VITAL: Override default compilation rules generated by automake...
# It shoves in a -c flag that nasm barfs on...

%.o: %.s ; 	$(AS) $(ASFLAGS) -o $@ $<

%.o: %.x86c ; 	$(CC) $(CFLAGS) -mmmx -o $@ $<

# Comment....
