EXTRA_DIST = \
	arrow_left.xpm \
	arrow_right.xpm \
	arrows.xpm \
	cam.xpm \
	editing.xpm \
	editor_fast_i.xpm \
	editor_fast.xpm \
	editor_pause.xpm \
	editor_play_i.xpm \
	editor_play.xpm \
	editor_record.xpm \
	editor_step_i.xpm \
	editor_step.xpm \
	editor_stop.xpm \
	file_new.xpm \
	file_open.xpm \
	file_save.xpm \
	file_widget_open.xpm \
	film.xpm \
	gnome-error.xpm \
	gnome-info.xpm \
	gnome-warning.xpm \
	linux_studio_logo.xpm \
	linuxvideostudio-desktop-icon.xpm \
	poweroff.xpm \
	poweron.xpm \
	preferences.xpm \
	scene_add.xpm \
	scene_delete.xpm \
	scene_detection.xpm \
	scene_empty.xpm \
	scene_left.xpm \
	scene_right.xpm \
	scene_screenshot.xpm \
	scene_split.xpm \
	slider_brightness.xpm \
	slider_contrast.xpm \
	slider_hue.xpm \
	slider_sat_colour.xpm \
	slider_volume.xpm \
	stv_accept.xpm \
	stv_arrow_down.xpm \
	stv_arrow_up.xpm \
	stv_fullscreen.xpm \
	stv_reject.xpm \
	stv_screenshot.xpm \
	tv.xpm \
	effect_text.xpm \
	effect_picture.xpm \
	effect_transition.xpm \
	encode_all.xpm \
	encode_video.xpm \
	encode_audio.xpm \
	distributed_encoding.xpm \
	gnome-fontsel.xpm \
	gnome-color-browser.xpm
