# $Id$
bin_PROGRAMS = vcdimager
vcdimager_SOURCES = \
	bytesex.c \
	bytesex.h \
	cd_sector.c \
	cd_sector.h \
	cd_sector_private.h \
	directory.c \
	directory.h \
	iso9660.c \
	iso9660.h \
	iso9660_private.h \
	logging.h \
	logging.c \
	main.c \
	mpeg.c \
	mpeg.h \
	salloc.c \
	salloc.h \
	transfer.c \
	transfer.h \
	vcdfiles.c \
	vcdfiles.h
